Made changes according to the requirements